tests/custom/STARIS_2022/operation-type-errors/not-type-error/stderr.expected
Error:
    not-type-error.essence:2:17:
  |
2 | such that b = (!5)
  |                 ^
Type error:
	Expected: bool
	Got: int

cat: *.solution: No such file or directory
